updated clang-tidy for const; made yml not trig for main

--- a/.github/workflows/cpp-style.yml
+++ b/.github/workflows/cpp-style.yml
@@ -1,8 +1,9 @@
 name: C++ Style Check
 
 on:
-  push:
-
+    branches-ignore:
+      - main
+      - 'main*'
 jobs:
   style-check:
     runs-on: ubuntu-latest
